--- a/index.html
+++ b/index.html
@@ -15,8 +15,59 @@
 
     <title>Hello, world!</title>
   </head>
+
   <body>
-    <h1>Hello, world!</h1>
+    <div class="container border">
+      <h1>Hello, world!</h1>
+      <p>
+        Fixed size containerFixed size containerFixed size containerFixed size
+        containerFixed size containerFixed size containerFixed size
+        containerFixed size containerFixed size containerFixed size
+        containerFixed size containerFixed size containerFixed size
+        containerFixed size containerFixed size containerFixed size
+        containerFixed size containerFixed size containerFixed size
+        containerFixed size containerFixed size containerFixed size container
+      </p>
+    </div>
+
+    <div class="container-fluid border bg-primary">
+      <h1>Hello, world!</h1>
+      <p>
+        Fluid size container.Fluid size container.Fluid size container.Fluid
+        size container.Fluid size container.Fluid size container.Fluid size
+        container.Fluid size container.Fluid size container.Fluid size
+        container.Fluid size container.Fluid size container.Fluid size
+        container.Fluid size container.Fluid size container.Fluid size
+        container.Fluid size container.Fluid size container.Fluid size
+        container.Fluid size container.Fluid size container.Fluid size
+        container.Fluid size container.
+      </p>
+    </div>
+
+    <div class="container-xll border bg-primary">
+      <h1>Hello, world!</h1>
+      <p>XXL size container.</p>
+    </div>
+
+    <div class="container-xl border bg-primary">
+      <h1>Hello, world!</h1>
+      <p>XL size container.</p>
+    </div>
+
+    <div class="container-lg border bg-primary">
+      <h1>Hello, world!</h1>
+      <p>LG size container.</p>
+    </div>
+
+    <div class="container-md border bg-primary">
+      <h1>Hello, world!</h1>
+      <p>MD size container.</p>
+    </div>
+
+    <div class="container-sm border bg-primary">
+      <h1>Hello, world!</h1>
+      <p>SM size container.</p>
+    </div>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
