--- a/index.html
+++ b/index.html
@@ -17,58 +17,6 @@
   </head>
 
   <body>
-    <div class="container border">
-      <h1>Hello, world!</h1>
-      <p>
-        Fixed size containerFixed size containerFixed size containerFixed size
-        containerFixed size containerFixed size containerFixed size
-        containerFixed size containerFixed size containerFixed size
-        containerFixed size containerFixed size containerFixed size
-        containerFixed size containerFixed size containerFixed size
-        containerFixed size containerFixed size containerFixed size
-        containerFixed size containerFixed size containerFixed size container
-      </p>
-    </div>
-
-    <div class="container-fluid border bg-primary">
-      <h1>Hello, world!</h1>
-      <p>
-        Fluid size container.Fluid size container.Fluid size container.Fluid
-        size container.Fluid size container.Fluid size container.Fluid size
-        container.Fluid size container.Fluid size container.Fluid size
-        container.Fluid size container.Fluid size container.Fluid size
-        container.Fluid size container.Fluid size container.Fluid size
-        container.Fluid size container.Fluid size container.Fluid size
-        container.Fluid size container.Fluid size container.Fluid size
-        container.Fluid size container.
-      </p>
-    </div>
-
-    <div class="container-xll border bg-primary">
-      <h1>Hello, world!</h1>
-      <p>XXL size container.</p>
-    </div>
-
-    <div class="container-xl border bg-primary">
-      <h1>Hello, world!</h1>
-      <p>XL size container.</p>
-    </div>
-
-    <div class="container-lg border bg-primary">
-      <h1>Hello, world!</h1>
-      <p>LG size container.</p>
-    </div>
-
-    <div class="container-md border bg-primary">
-      <h1>Hello, world!</h1>
-      <p>MD size container.</p>
-    </div>
-
-    <div class="container-sm border bg-primary">
-      <h1>Hello, world!</h1>
-      <p>SM size container.</p>
-    </div>
-
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
@@ -77,6 +25,20 @@
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     ></script>
+
+    <div class="container-fluid border border-primary p-5">
+      <div class="row">
+        <div class="col border border-primary">Coluna 1</div>
+        <div class="col-2 border border-primary">Coluna 2</div>
+        <div class="col border border-primary">Coluna 3</div>
+      </div>
+
+      <div class="row">
+        <div class="col-sm-2 border border-primary">Coluna 1</div>
+        <div class="col-2 border border-primary">Coluna 2</div>
+        <div class="col border border-primary">Coluna 3</div>
+      </div>
+    </div>
 
     <!-- Option 2: Separate Popper and Bootstrap JS -->
     <!--
