--- a/index.html
+++ b/index.html
@@ -28,15 +28,24 @@
 
     <div class="container-fluid border border-primary p-5">
       <div class="row">
-        <div class="col border border-primary">Coluna 1</div>
-        <div class="col-2 border border-primary">Coluna 2</div>
-        <div class="col border border-primary">Coluna 3</div>
+        <div class="col-1 border border-primary text-center">Coluna 1</div>
+        <div class="col-1 border border-primary text-center">Coluna 2</div>
+        <div class="col-1 border border-primary text-center">Coluna 3</div>
+        <div class="col-1 border border-primary text-center">Coluna 4</div>
+        <div class="col-1 border border-primary text-center">Coluna 5</div>
+        <div class="col-1 border border-primary text-center">Coluna 6</div>
       </div>
 
       <div class="row">
-        <div class="col-sm-2 border border-primary">Coluna 1</div>
-        <div class="col-2 border border-primary">Coluna 2</div>
-        <div class="col border border-primary">Coluna 3</div>
+        <div class="col-1 border border-primary text-center">Coluna 1</div>
+        <div class="col-1 border border-primary text-center">Coluna 2</div>
+        <div class="col-1 border border-primary text-center">Coluna 3</div>
+        <div class="col-2 border border-primary text-center">Coluna 4</div>
+      </div>
+
+      <div class="row">
+        <div class="col-3 border border-primary text-center">Coluna 1</div>
+        <div class="col-3 border border-primary text-center">Coluna 2</div>
       </div>
     </div>
 
