--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
   <head>
-    <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <!-- Bootstrap CSS -->
     <link
       rel="stylesheet"
       crossorigin="anonymous"
@@ -17,42 +15,57 @@
   </head>
 
   <body>
-    <!-- Optional JavaScript; choose one of the two! -->
-
-    <!-- Option 1: Bootstrap Bundle with Popper -->
     <script
       crossorigin="anonymous"
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     ></script>
 
-    <div class="container-fluid border border-primary p-5">
-      <div class="row">
-        <div class="col-1 border border-primary text-center">Coluna 1</div>
-        <div class="col-1 border border-primary text-center">Coluna 2</div>
-        <div class="col-1 border border-primary text-center">Coluna 3</div>
-        <div class="col-1 border border-primary text-center">Coluna 4</div>
-        <div class="col-1 border border-primary text-center">Coluna 5</div>
-        <div class="col-1 border border-primary text-center">Coluna 6</div>
+    <div class="container-fluid row border border-primary p-4 mb-4">
+      <div class="col container-fluid border border-primary me-1">
+        <h1>CFB CURSOS</h1>
+        <h2>CFB CURSOS</h2>
+        <h3>CFB CURSOS</h3>
+        <h4>CFB CURSOS</h4>
+        <h5>CFB CURSOS</h5>
+        <h6>CFB CURSOS</h6>
       </div>
 
-      <div class="row">
-        <div class="col-1 border border-primary text-center">Coluna 1</div>
-        <div class="col-1 border border-primary text-center">Coluna 2</div>
-        <div class="col-1 border border-primary text-center">Coluna 3</div>
-        <div class="col-2 border border-primary text-center">Coluna 4</div>
-      </div>
-
-      <div class="row">
-        <div class="col-3 border border-primary text-center">Coluna 1</div>
-        <div class="col-3 border border-primary text-center">Coluna 2</div>
+      <div class="col container-fluid border border-primary">
+        <p class="h1">CFB CURSOS</p>
+        <p class="h2">CFB CURSOS</p>
+        <p class="h3">CFB CURSOS</p>
+        <p class="h4">CFB CURSOS</p>
+        <p class="h5">CFB CURSOS</p>
+        <p class="h6">CFB CURSOS</p>
       </div>
     </div>
 
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-    -->
+    <div class="container-fluid row border border-primary p-4">
+      <div class="col container-fluid border border-primary me-1">
+        <h1 class="display-1">CFB CURSOS</h1>
+        <h2 class="display-2">CFB CURSOS</h2>
+        <h3 class="display-3">CFB CURSOS</h3>
+        <h4 class="display-4">CFB CURSOS</h4>
+        <h5 class="display-5">CFB CURSOS</h5>
+        <h6 class="display-6">CFB CURSOS</h6>
+      </div>
+
+      <div class="col container-fluid border border-primary">
+        <p class="h1 text-center">
+          <abbr title="Canal Fessor Bruno">CFB</abbr
+          ><span class="small">CURSOS</span>
+        </p>
+        <p class="text-lowercase">CFB CURSOS</p>
+        <p>CFB CURSOS</p>
+        <p>CFB CURSOS</p>
+        <p>CFB CURSOS</p>
+        <p>CFB CURSOS</p>
+      </div>
+    </div>
   </body>
 </html>
+
+<!--- Anotações
+  me = margin-end = margin-right
+-->
