--- a/index.html
+++ b/index.html
@@ -21,51 +21,22 @@
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     ></script>
 
-    <div class="container-fluid row border border-primary p-4 mb-4">
-      <div class="col container-fluid border border-primary me-1">
-        <h1>CFB CURSOS</h1>
-        <h2>CFB CURSOS</h2>
-        <h3>CFB CURSOS</h3>
-        <h4>CFB CURSOS</h4>
-        <h5>CFB CURSOS</h5>
-        <h6>CFB CURSOS</h6>
-      </div>
-
-      <div class="col container-fluid border border-primary">
-        <p class="h1">CFB CURSOS</p>
-        <p class="h2">CFB CURSOS</p>
-        <p class="h3">CFB CURSOS</p>
-        <p class="h4">CFB CURSOS</p>
-        <p class="h5">CFB CURSOS</p>
-        <p class="h6">CFB CURSOS</p>
-      </div>
-    </div>
-
-    <div class="container-fluid row border border-primary p-4">
-      <div class="col container-fluid border border-primary me-1">
-        <h1 class="display-1">CFB CURSOS</h1>
-        <h2 class="display-2">CFB CURSOS</h2>
-        <h3 class="display-3">CFB CURSOS</h3>
-        <h4 class="display-4">CFB CURSOS</h4>
-        <h5 class="display-5">CFB CURSOS</h5>
-        <h6 class="display-6">CFB CURSOS</h6>
-      </div>
-
-      <div class="col container-fluid border border-primary">
-        <p class="h1 text-center">
-          <abbr title="Canal Fessor Bruno">CFB</abbr
-          ><span class="small">CURSOS</span>
-        </p>
-        <p class="text-lowercase">CFB CURSOS</p>
-        <p>CFB CURSOS</p>
-        <p>CFB CURSOS</p>
-        <p>CFB CURSOS</p>
-        <p>CFB CURSOS</p>
-      </div>
+    <div class="container-fluid row border border-primary p-4 bg-primary">
+      <p class="h3 text-primary bg-light">primary</p>
+      <p class="h3 text-secondary bg-light">secondary</p>
+      <p class="h3 text-muted bg-light">muted</p>
+      <p class="h3 text-dark bg-light">dark</p>
+      <p class="h3 text-success bg-light">success</p>
+      <p class="h3 text-info">info</p>
+      <p class="h3 text-warning">warning</p>
+      <p class="h3 text-danger">danger</p>
+      <p class="h3 text-white">white</p>
+      <p class="h3 text-light">light</p>
     </div>
   </body>
 </html>
 
 <!--- Anotações
   me = margin-end = margin-right
+  ms = margin-start = margin-left
 -->
