--- a/index.html
+++ b/index.html
@@ -21,38 +21,14 @@
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     ></script>
 
-    <div class="container-fluid row p-4">
-      <table class="table table-dark table-striped table-hover">
-        <thead>
-          <tr>
-            <th>Marca</th>
-            <th>Modelo</th>
-            <th>Ano</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr class="table-danger">
-            <td>Honda</td>
-            <td>HRV</td>
-            <td>2016</td>
-          </tr>
-          <tr>
-            <td>Volkswagem</td>
-            <td>Polo</td>
-            <td>2020</td>
-          </tr>
-          <tr>
-            <td>Volkswagem</td>
-            <td>Polo</td>
-            <td>2020</td>
-          </tr>
-          <tr>
-            <td>Volkswagem</td>
-            <td>Polo</td>
-            <td>2020</td>
-          </tr>
-        </tbody>
-      </table>
+    <div class="container-fluid p-4">
+      <img
+        src="luffy.jpg"
+        alt="luffy"
+        class="w-25 rounded-circle d-block mx-auto mb-5"
+      />
+
+      <img src="luffy.jpg" alt="luffy" class="img-fluid rounded" />
     </div>
   </body>
 </html>
@@ -60,4 +36,5 @@
 <!--- Anotações
   me = margin-end = margin-right
   ms = margin-start = margin-left
+  mx-auto = alinha horizontalmente
 -->
