--- a/index.html
+++ b/index.html
@@ -21,29 +21,10 @@
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     ></script>
 
-    <div
-      id="jumbotron"
-      class="container bg-primary text-light p-4 rounded my-4"
-    >
-      <h1>CFB Cursos</h1>
+    <div class="alert alert-success alert-dismissible">
+      <div class=""><strong>Sucesso</strong> em uma ação</div>
 
-      <hr style="height: 3px; opacity: 1" class="rounded-circle" />
-
-      <p>Curso de desenvolvimento de software.</p>
-    </div>
-
-    <div class="container">
-      <button
-        onclick="document.getElementById('jumbotron').classList.remove('invisible')"
-      >
-        Mostrar
-      </button>
-
-      <button
-        onclick="document.getElementById('jumbotron').classList.add('invisible')"
-      >
-        Ocultar
-      </button>
+      <button class="btn-close" data-bs-dismiss="alert"></button>
     </div>
   </body>
 </html>
