--- a/index.html
+++ b/index.html
@@ -21,10 +21,13 @@
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     ></script>
 
-    <div class="alert alert-success alert-dismissible">
-      <div class=""><strong>Sucesso</strong> em uma ação</div>
-
-      <button class="btn-close" data-bs-dismiss="alert"></button>
+    <div class="container-fluid p-5">
+      <button class="btn btn-success btn-lg">Sucesso</button>
+      <button class="btn btn-success btn-outline-danger btn-sm">Sucesso</button>
+      <button class="btn btn-secondary btn-block">Secondary</button>
+      <button class="btn btn-primary disabled btn-block">Primary</button>
+      <button class="btn btn-close"></button>
+      <button class="btn btn-link">Link</button>
     </div>
   </body>
 </html>
