--- a/index.html
+++ b/index.html
@@ -22,15 +22,11 @@
     ></script>
 
     <div class="container-fluid">
-      <img src="luffy.jpg" alt="luffy" class="w-25 float-start" />
-      <img src="luffy.jpg" alt="luffy" class="w-25 float-end" />
-      <img src="luffy.jpg" alt="luffy" class="w-25 d-block" />
-
-      <div class="container-fluid text-center">
-        <img src="luffy.jpg" alt="luffy" class="w-25" />
-      </div>
-
-      <img src="luffy.jpg" alt="luffy" class="w-25 d-block mx-auto" />
+      <h2 class="badge bg-primary">Test</h2>
+      <h2>Test</h2>
+      <h2>Test</h2>
+      <h2>Test</h2>
+      <h2>Test</h2>
     </div>
   </body>
 </html>
