--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     ></script>
 
-    <div class="container-fluid">
-      <h2 class="badge bg-primary">Test</h2>
-      <h2>Test</h2>
-      <h2>Test</h2>
-      <h2>Test</h2>
-      <h2>Test</h2>
+    <div
+      class="container-fluid border align-items-center d-flex justify-content-center"
+    >
+      <div class="spinner-border text-primary spinner-border-sm"></div>
+      <div class="spinner-border text-primary spinner-border"></div>
+      <div class="spinner-grow text-primary spinner-grow"></div>
     </div>
   </body>
 </html>
