--- a/index.html
+++ b/index.html
@@ -24,10 +24,38 @@
     <div
       class="container-fluid border align-items-center d-flex justify-content-center"
     >
-      <div class="spinner-border text-primary spinner-border-sm"></div>
-      <div class="spinner-border text-primary spinner-border"></div>
-      <div class="spinner-grow text-primary spinner-grow"></div>
+      <ul class="pagination">
+        <li class="page-item active" onclick="active(this)">
+          <a class="page-link" href="#">Anterior</a>
+        </li>
+        <li class="page-item" onclick="active(this)">
+          <a class="page-link" href="#">1</a>
+        </li>
+        <li class="page-item" onclick="active(this)">
+          <a class="page-link" href="#">2</a>
+        </li>
+        <li class="page-item" onclick="active(this)">
+          <a class="page-link" href="#">3</a>
+        </li>
+        <li class="page-item" onclick="active(this)">
+          <a class="page-link" href="#">4</a>
+        </li>
+        <li class="page-item" onclick="active(this)">
+          <a class="page-link" href="#">Próximo</a>
+        </li>
+      </ul>
     </div>
+
+    <script>
+      const active = (element) => {
+        let items = document.getElementsByClassName("page-item");
+
+        for (let i = 0; i < items.length; i++)
+          items[i].classList.remove("active");
+
+        element.classList.add("active");
+      };
+    </script>
   </body>
 </html>
 
