--- a/index.html
+++ b/index.html
@@ -21,39 +21,28 @@
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     ></script>
 
-    <ul class="list-group">
-      <li
-        class="list-item active list-group-item-primary list-group-item-action"
-      >
-        1
-      </li>
-      <li class="list-item list-group-item-primary list-group-item-action">
-        2
-      </li>
-      <li class="list-item list-group-item-primary list-group-item-action">
-        3
-      </li>
-      <li class="list-item list-group-item-primary list-group-item-action">
-        4
-      </li>
-    </ul>
+    <div class="dropdown">
+      <button class="btn btn-dark dropdown-toggle" data-bs-toggle="dropdown">
+        Dropdown
+      </button>
 
-    <ul class="list-group list-group-horizontal">
-      <li
-        class="list-item active list-group-item-primary list-group-item-action"
-      >
-        1
-      </li>
-      <li class="list-item list-group-item-primary list-group-item-action">
-        2
-      </li>
-      <li class="list-item list-group-item-primary list-group-item-action">
-        3
-      </li>
-      <li class="list-item list-group-item-primary list-group-item-action">
-        4
-      </li>
-    </ul>
+      <div class="dropdown-menu dropdown-menu-dark">
+        <h2 class="dropdown-header">Header</h2>
+        <a href="#" class="dropdown-item"> Item 1</a><a href=""></a>
+        <a href="#" class="dropdown-item"> Item 2</a><a href=""></a>
+        <hr class="dropdown-divider" />
+
+        <h2 class="dropdown-header">Header</h2>
+        <a href="#" class="dropdown-item"> Item 1</a><a href=""></a>
+        <a href="#" class="dropdown-item"> Item 2</a><a href=""></a>
+        <hr class="dropdown-divider" />
+
+        <h2 class="dropdown-header">Header</h2>
+        <a href="#" class="dropdown-item"> Item 1</a><a href=""></a>
+        <a href="#" class="dropdown-item"> Item 2</a><a href=""></a>
+        <hr class="dropdown-divider" />
+      </div>
+    </div>
   </body>
 </html>
 
