--- a/index.html
+++ b/index.html
@@ -22,25 +22,21 @@
     ></script>
 
     <div class="dropdown">
-      <button class="btn btn-dark dropdown-toggle" data-bs-toggle="dropdown">
-        Dropdown
+      <button
+        class="btn btn-success"
+        data-bs-toggle="collapse"
+        data-bs-target="#collapsing"
+      >
+        Collapse
       </button>
 
-      <div class="dropdown-menu dropdown-menu-dark">
-        <h2 class="dropdown-header">Header</h2>
-        <a href="#" class="dropdown-item"> Item 1</a><a href=""></a>
-        <a href="#" class="dropdown-item"> Item 2</a><a href=""></a>
-        <hr class="dropdown-divider" />
-
-        <h2 class="dropdown-header">Header</h2>
-        <a href="#" class="dropdown-item"> Item 1</a><a href=""></a>
-        <a href="#" class="dropdown-item"> Item 2</a><a href=""></a>
-        <hr class="dropdown-divider" />
-
-        <h2 class="dropdown-header">Header</h2>
-        <a href="#" class="dropdown-item"> Item 1</a><a href=""></a>
-        <a href="#" class="dropdown-item"> Item 2</a><a href=""></a>
-        <hr class="dropdown-divider" />
+      <div id="collapsing" class="collapse bg-primary">
+        <p class="text-light">
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquam
+          perferendis placeat molestias distinctio! Unde sint totam molestias
+          pariatur beatae similique! Debitis veniam non inventore odit ducimus
+          magni sequi sed eligendi.
+        </p>
       </div>
     </div>
   </body>
