--- a/index.html
+++ b/index.html
@@ -3,47 +3,12 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-
-    <link
-      rel="stylesheet"
-      crossorigin="anonymous"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-    />
+    <link rel="stylesheet" href="./css/main.css" />
 
     <title>Hello, world!</title>
   </head>
 
   <body>
-    <script
-      crossorigin="anonymous"
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-    ></script>
-
-    <div class="dropdown">
-      <button
-        class="btn btn-success"
-        data-bs-toggle="collapse"
-        data-bs-target="#collapsing"
-      >
-        Collapse
-      </button>
-
-      <div id="collapsing" class="collapse bg-primary">
-        <p class="text-light">
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquam
-          perferendis placeat molestias distinctio! Unde sint totam molestias
-          pariatur beatae similique! Debitis veniam non inventore odit ducimus
-          magni sequi sed eligendi.
-        </p>
-      </div>
-    </div>
+    <button class="btn btn-primary btn-outline-danger">test</button>
   </body>
 </html>
-
-<!--- Anotações
-  me = margin-end = margin-right
-  ms = margin-start = margin-left
-  mx-auto = alinha horizontalmente
--->
